[gd_scene load_steps=4 format=2]

[ext_resource path="res://res/images/pixel.svg" type="Texture" id=1]
[ext_resource path="res://src/entities/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "The entity which the user controls in the game."
}

[node name="PlayerBody" type="KinematicBody2D" parent="."]
collision_layer = 2

[node name="Sprite" type="Sprite" parent="PlayerBody"]
self_modulate = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
scale = Vector2( 30, 30 )
texture = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="PlayerBody"]
visible = false
shape = SubResource( 1 )

[node name="MainCamera" type="Camera2D" parent="PlayerBody"]
current = true
limit_left = 0
limit_bottom = 600

[node name="ExplodeParticles" type="CPUParticles2D" parent="PlayerBody"]
emitting = false
amount = 90
lifetime = 4.0
one_shot = true
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 45.16
initial_velocity_random = 0.55
angular_velocity_random = 0.5
angle_random = 1.0
scale_amount = 7.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ParticleTimer" to="." method="_on_ParticleTimer_timeout"]
